# practice-project

./: README.md  pyproject.toml  user_reference.md
analysis/: Classification_method_analysis.ipynb  cnn_architectures.md  countplot.html  first_cnn.ipynb  nn_classification_method_analysis.md  scatterplot.html
models/: 10e_b256_history.pickle  10e_new_split_ratio_history.pickle  10ep_128b_history.pickle  10ep_image_check_history.pickle  10ep_mlflowcheck_history.pickle  20ep_256b_history.pickle  40e_b256_split03015_history.pickle  5e_b64_history.pickle  fast_check_history.pickle  quick_2e_mlflow_check_history.pickle  quick_2e_run_history.pickle
models/10e_b256/: keras_metadata.pb  saved_model.pb
models/10e_b256/variables/: variables.data-00000-of-00001  variables.index
models/10e_new_split_ratio/: saved_model.pb
models/10e_new_split_ratio/variables/: variables.data-00000-of-00001  variables.index
models/10ep_128b/: saved_model.pb
models/10ep_128b/variables/: variables.data-00000-of-00001  variables.index
models/10ep_image_check/: saved_model.pb
models/10ep_image_check/variables/: variables.data-00000-of-00001  variables.index
models/10ep_mlflowcheck/variables/: variables.data-00000-of-00001  variables.index
models/20ep_256b/: saved_model.pb
models/40e_b256_split03015/: saved_model.pb
models/5e_b64/: saved_model.pb
models/fast_check/: saved_model.pb
models/quick_2e_mlflow_check/: saved_model.pb
src/: data_loader.py  test_evaluate.py  train.py
src/practice_project/: data_loader.py  load_model.py  test_evaluate.py  train.py
(+55 files in other folders)
