[tool.poetry]
name = "practice-project"
version = "0.1.0"
description = ""
authors = ["Mariya Filiankova <masha1747@gmail.com>"]

[tool.poetry.scripts]
fit_predict = "src.practice_project.train:fit_predict"
fit_predict_single = "src.practice_project.train:fit_predict_single"
load_predict = "src.practice_project.load_model:load_predict"
load_predict_single = "src.practice_project.load_model:load_predict_single"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "^4.6.0"
pandas = "^1.4.3"
sklearn = "^0.0"
keras = "^2.9.0"
tensorflow = "^2.9.1"
matplotlib = "^3.5.2"
mlflow = "^1.26.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

